# AgenticReID

./: .gitignore  main.py  pyproject.toml
src/: check_identity_eval.py
src/agentic_reid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_reid/data/: episodes.py  icfg_pedes.py
src/agentic_reid/eval/: metrics.py
src/agentic_reid/models/: clip_encoder.py
src/agentic_reid/retrieval/: id_index.py  index.py  search.py
src/agentic_reid/scripts/: build_icfg_index.py  eval_id_baseline.py  eval_single_turn.py  inspect_icfg.py  make_icfg_episodes.py  test_irra_encoder.py
src/data/: icfg_test_episodes.json
src/scripts/: build_index.py  inspect_icfg.py  search.py  test.py
